# ESP32-Rhasspy-Satellite

./: .clang-format  .gitignore  Esp32-poe-iso.md  README.md  Streamer.code-workspace  audiokit.md  inmp441.md  inmp441max98357a.md  m5atomecho.md  matrixvoice.md  platformio.ini  record.py
.github/workflows/: buildall.yml
MatrixVoiceAudioServer/: Makefile  MatrixVoiceAudioServer.ino  RingBuf.h  SoundData.h  config.h  deploy.sh  deploy_ota.sh  deploy_single.sh  sdkconfig  sdkconfig.old  update_firmware.py  webpages.h
MatrixVoiceAudioServer/hal/: circular_queue.h  everloop.cpp  microphone_array.h  microphone_core.cpp  microphone_core.h  microphone_core_fir.h  voice_memory_map.h  wishbone_bus.cpp
MatrixVoiceAudioServer/main/: Kconfig.projbuild  MatrixVoiceAudioServer.cpp  network.c  network.h  ota_update.c  ota_update.h
MatrixVoiceAudioServer/make/: deploy.mk
MatrixVoiceAudioServerArduino/: MatrixVoiceAudioServerArduino.ino  config.h  deploy.sh
MatrixVoiceAudioServerArduino/hal/: everloop_image.h  microphone_array.cpp  wishbone_bus.h
MatrixVoiceAudioServerNoOTA/: Makefile
MatrixVoiceAudioServerNoOTA/components/esp-mqtt/: .gitignore  CMakeLists.txt  esp_lwmqtt.c  esp_mqtt.c
MatrixVoiceAudioServerNoOTA/components/esp-mqtt/lwmqtt/: .travis.yml  CMakeLists.txt
MatrixVoiceAudioServerNoOTA/components/esp-mqtt/lwmqtt/examples/: sync.c
MatrixVoiceAudioServerNoOTA/components/esp-mqtt/lwmqtt/src/os/: unix.c
MatrixVoiceAudioServerNoOTA/components/esp-mqtt/lwmqtt/tests/: client.cpp  packet.cpp
MatrixVoiceAudioServerNoOTA/components/esp-mqtt/test/: Makefile
MatrixVoiceAudioServerNoOTA/main/: Kconfig.projbuild  MatrixVoiceAudioServerNoOTA.cpp
OTABuilder/: Makefile  partitions_single.csv  sdkconfig  sdkconfig.old
PlatformIO/: .clang-format  .gitignore  deploy.sh  load_settings.py  platformio.ini  settings.ini.example
lib/: MATRIXVoiceOTA
ota/: install.sh
src/: MatrixVoiceAudioServer.cpp
(+64 files in other folders)
